# sharp

./: Makefile.am  STYLEGUIDE  TODO  autogen.sh  configure.ac  howto.txt  makefile
Debug/: sources.mk
Debug/src/: subdir.mk
Debug/src/input/: subdir.mk
Debug/src/support/: subdir.mk
Release/src/: subdir.mk
Release/src/sharp/: subdir.mk
Release/src/support/: subdir.mk
debug/: makefile  objects.mk
debug/src/: subdir.mk
debug/src/htree/: subdir.mk
debug/src/input/: subdir.mk
debug/src/sharp/: subdir.mk
debug/src/support/: subdir.mk
include/: Makefile.am  sharp  sharplib
include/libsharp/: EncodedSolution.hpp  HtdSolver.hpp  ICumulativeSolutionBuilder.hpp  IHtdAlgorithm.hpp  IInstance.hpp  IIterativeSolutionBuilder.hpp  ISolution.hpp  ISolutionIterator.hpp  ITuple.hpp  ITupleIterator.hpp  ITupleSolution.hpp  global.hpp
include/sharp/: AbstractAlgorithm.hpp  Benchmark.hpp  Component.hpp  ConstEnumerator.hpp  DecomposableInstance.hpp  Enumerator.hpp  EnumeratorSkeleton.hpp  ExtendedHypertree.hpp  GMPCountingSolutionContent.hpp  Global.hpp  H_BucketElim.hpp  Hash.hpp  Hasher.hpp  HtdSolver.hpp  Hypergraph.hpp  Hypertree.hpp  IConstEnumerator.hpp  IDecomposableInstance.hpp  IEnumerator.hpp  IHtdNodeEvaluator.hpp  IHtdSolver.hpp  IInstance.hpp  IMutableNodeTableMap.hpp  IMutableNodeTupleSetMap.hpp  INodeTableMap.hpp  INodeTupleSetMap.hpp  ISolution.hpp  ISolver.hpp  ITable.hpp  ITableMap.hpp  ITreeAlgorithm.hpp  ITreeEvaluator.hpp  ITreeSolutionExtractor.hpp  ITreeSolver.hpp  ITreeTupleAlgorithm.hpp  ITreeTupleSolutionExtractor.hpp  ITuple.hpp  ITupleSet.hpp  IterativeTreeSolver.hpp  IterativeTreeTupleSolver.hpp  (+10 more)
m4/: acx_pthread.m4
release/: makefile  objects.mk  sources.mk
release/src/: subdir.mk
release/src/htree/: subdir.mk
release/src/input/: subdir.mk
release/src/sharp/: subdir.mk
release/src/support/: subdir.mk
src/: AbstractAlgorithm.cpp  ArgumentationProblem.cpp  ArgumentationProblem.h  Benchmark.cpp  DatalogProblem.cpp  DatalogProblem.h  EncodedSolution.cpp  EncodedSolution.hpp  Global.cpp  Global.h  Hash.cpp  HtdSolutionIterator.hpp  HtdSolutionTree.cpp  HtdSolutionTree.hpp  HtdSolutionTreeBuilder.cpp  HtdSolutionTreeBuilder.hpp  HtdSolver.cpp  HtdSolver.hpp  ITuple.cpp  ITuple.hpp  InterleavedTreeAlgorithm.cpp  InterleavedTreeAlgorithm.hpp  InterleavedTreeTupleAlgorithm.cpp  InterleavedTreeTupleAlgorithm.hpp  IterativeTreeSolver.cpp  IterativeTreeSolver.hpp  IterativeTreeSolverBase.cpp  IterativeTreeSolverBase.hpp  IterativeTreeTupleSolver.cpp  IterativeTreeTupleSolver.hpp  IterativeTreeTupleSolver_AlgorithmAdapter.cpp  IterativeTreeTupleSolver_SolutionExtractorAdapter.cpp  Logger.cpp  Makefile.am  NodeTableMap.cpp  NodeTableMap.hpp  NodeTableMapOverlay.cpp  NodeTableMapOverlay.hpp  NodeTupleSetMap.cpp  NodeTupleSetMap.hpp  (+15 more)
src/htree/: CompSet.cpp  CompSet.h  Component.cpp  Component.h  ExtendedHypertree.cpp  ExtendedHypertree.h  Globals.cpp  Globals.h  H_BucketElim.cpp  H_BucketElim.h  Hyperedge.cpp  Hyperedge.h  Hypergraph.cpp  Hypergraph.h  Hypertree.cpp  Hypertree.h  Main.cpp  MaximumCardinalitySearchOrdering.cpp  MinimumDegreeOrdering.cpp  MinimumFillOrdering.cpp  Node.cpp  Node.h  Parser.cpp  Parser.h  SetCover.cpp  SetCover.h  SpecialHEdge.cpp  SpecialHEdge.h
src/input/: AbstractHypergraph.cpp  AbstractHypergraph.h  ArgumentationLexer.l  ArgumentationParser.yacc  DIMACSHypergraph.cpp  DIMACSHypergraph.h  DIMACSLexer.l  DIMACSParser.y  DatalogHypergraph.cpp  DatalogHypergraph.h  DatalogLexer.l  DatalogParser.y
src/sharp/: AbstractAlgorithm.cpp  AbstractAlgorithm.h  AbstractAlgorithmTemplates.cpp  AbstractArgumentation.cpp  AbstractArgumentation.h  AdmissibleArgumentation.cpp  AdmissibleArgumentation.h  AnswerSet.cpp  AnswerSet.h  Argumentation.cpp  Argumentation.h  Circumscription.cpp  Circumscription.h  ExtendedHypertree.cpp  ExtendedHypertree.h  HCFAnswerSet.cpp  HCFAnswerSet.h  HeadCycleFreeAnswerSet.cpp  HeadCycleFreeAnswerSet.h  Helper.cpp  Helper.h  LazySolutionSet.cpp  LazySolutionSet.h  PreferredArgumentation.cpp  PreferredArgumentation.h  SharpEnumASP.h  SharpEnumMinSAT.cpp  SharpEnumMinSAT.h  SharpSAT.cpp  SharpSAT.h
src/sharp/temp/: SharpEnumMinSAT.cpp  SharpEnumMinSAT.h  SharpSAT.cpp  temp.txt
src/support/: support.cpp  support.h
src/util/: errorhandling.cpp  errorhandling.hpp
tests/: Makefile.am
tests/integration/: IterativeTreeSolver.cpp
tests/mocks/: MockTreeEvaluator.cpp
