AM_CTAGSFLAGS = --extra=+f

libsharp_la_includedir = ${pkgincludedir}
libsharp_la_include_HEADERS = ./libsharp/EncodedSolution.hpp \
			      ./libsharp/HtdSolver.hpp \
			      ./libsharp/ICumulativeSolutionBuilder.hpp \
			      ./libsharp/IHtdAlgorithm.hpp \
			      ./libsharp/IInstance.hpp \
			      ./libsharp/IIterativeSolutionBuilder.hpp \
			      ./libsharp/ISolution.hpp \
			      ./libsharp/ISolutionIterator.hpp \
			      ./libsharp/ITuple.hpp \
			      ./libsharp/ITupleIterator.hpp \
			      ./libsharp/ITupleSolution.hpp
			      ./sharp
