AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/include/sharp --pedantic -Wall -O2
lib_LTLIBRARIES = libsharp.la
libsharp_la_SOURCES = 	./Global.cpp \
				./Problem.cpp \
				./htree/Component.cpp \
				./htree/CompSet.cpp \
				./htree/ExtendedHypertree.cpp \
				./htree/Globals.cpp \
				./htree/Hyperedge.cpp \
				./htree/Hypergraph.cpp \
				./htree/Hypertree.cpp \
				./htree/H_BucketElim.cpp \
				./htree/Node.cpp \
				./htree/Parser.cpp \
				./htree/SetCover.cpp \
				./htree/SpecialHEdge.cpp \
				./AbstractAlgorithm.cpp \
				./support/support.cpp
libsharp_la_LDFLAGS = -version-info 0:0:0
